@@ -24,7 +24,7 @@ max-children:           16
 maildir-exclusive-lock: yes
 
 mailbox:                maildir:$(home)/XXXMaildir /var/spool/mail/$(user)
-#mailspool-index:        /tmp/$(escaped_name).tpop3d-index
+mailspool-index:        /tmp/$(escaped_name).tpop3d-index
 
 #mailbox:                /var/spool/mail/foobarbazquux
 
